# rbot

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  build.rs  get_frc_arm_gcc_header.py
cargo-rbot/: Cargo.toml
cargo-rbot/src/: main.rs
rbot-examples/: .gitignore  Cargo.toml
rbot-examples/super_simple_robot/: .rbotconfig  Cargo.toml
rbot-examples/super_simple_robot/src/: main.rs
rbothal/: Cargo.toml  HAL_wrapper.h  README.md  build.rs
rbothal/.cargo/: config
rbothal/headers/: pthread.h  stddef.h
rbothal/headers/bits/: syscall-32.h
rbothal/headers/hal/: FRCUsageReporting.h  HAL.h
rbothal/src/: hal_bindings.rs  hal_call.rs  lib.rs
rbotlib/: Cargo.toml  build.rs
rbotlib/src/: driverstation.rs  fpga.rs  joystick.rs  lib.rs  robot_base.rs  robot_state.rs
rbotlib/src/abotlib/: mod.rs  robot_base.rs
