[package]
name = "cargo-rbot"
version = "0.1.0"
authors = ["wozeparrot <wozeparrot@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "The Official Tool for Managing rbot Projects"
repository = "https://github.com/wozeparrot/rbot"

[dependencies]
clap = { version = "2.33.0", features = ["yaml"] }
subprocess = "0.1.18"