[package]
name = "cargo-rbot"
version = "0.1.0"
authors = ["wozeparrot <wozeparrot@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "The Official Tool for Managing rbot Projects"
repository = "https://github.com/wozeparrot/rbot"

[dependencies]
clap = { version = "2.33.0", features = ["yaml"] }
subprocess = "0.1.18"
toml = "0.5.4"
serde = "1.0"
serde_derive = "1.0"
tempfile = "3.1.0"
ref_slice = "1.2.0"